# picknik_accessories

./: .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
blender/: README.md
cmake/: picknik_accessoriesConfig.cmake
cmake/Modules/: InstallPicknikAccessories.cmake
descriptions/brackets/ur_realsense_camera_adapter/: picknik_ur_camera_adapter.urdf.xacro
descriptions/furniture/space_station/: space_station.urdf.xacro
descriptions/miscellaneous/: farnese-hercules-head.stl  mock_satellite.stl  satellite.stl
descriptions/simulation_worlds/: warehouse.sdf  warehouse_simple.sdf
macros/manipulators/: universal_robots.xacro
macros/mobile_base/: floating_base.xacro
macros/tools/: robotiq_2f_85.xacro  robotiq_epick.xacro
mujoco_assets/assets/: bottle.stl  bottle_tag0.mtl  bottle_tag1.mtl  bottle_tag2.mtl  concave_hemisphere.stl  convex_hemisphere.stl
mujoco_assets/lab_desk/: desk.xml  desk_globals.xml
mujoco_assets/lrmate200id/: lrmate200id.xml  lrmate200id_globals.xml
mujoco_assets/robotiq_2f85/: robotiq2f85.xml  robotiq2f85_globals.xml
mujoco_assets/ur5e/: ur5e.xml  ur5e_globals.xml
